# djongo

./: .gitignore  requirements.txt  setup.py
djongo/: __init__.py
djongo/models/: fields.py
pkg/: pyproject.toml  requirements.txt
pkg/djongo/: operations.py
pkg/tests/mock_tests/: test_sqlparsing.py
