[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dynamic = ["version"]
name = "djongo"
dependencies = [
    'sqlparse==0.4.4',
    'pymongo>=3.6.0',
    'django>=3.2',
]
authors = [
    { name = "doableware", email = 'support@doableware.com' }
]
license= {text = "AGPL"}
keywords = ["Django", "Djongo", "MongoDB", "driver", "connector"]
requires-python = ">=3.6"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3.6',
]
description = "Djongo: The Django MongoDB connector"
readme = "README.md"
[project.optional-dependencies]
json = [
  "jsonfield>=2.0.2",
  "django-jsoneditor>=0.0.12",
]
[project.urls]
Homepage = "https://www.djongomapper.com/"
Documentation = "https://www.djongomapper.com/docs/"
Repository = "https://github.com/doableware/djongo.git"

[tool.setuptools.dynamic]
version = {attr = "djongo.__version__"}